# drive

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PIPELINE.md  PLAN.md  README.md  ROADMAP.md  VISION.md  deny.toml  docker-compose.coedit.yml  docker-compose.dev.yml  docker-compose.yml
.docker/: README.md
.github/workflows/: ci.yml  hub-overview.yml  pages.yml  release.yml
crates/dochub-ai/: Cargo.toml
crates/dochub-ai/src/: agent.rs  answer.rs  lib.rs  pii.rs  remote.rs  summarize.rs
crates/dochub-auth/: Cargo.toml
crates/dochub-auth/examples/: hash.rs
crates/dochub-auth/src/: client_addr.rs  error.rs  extractor.rs  handlers.rs  lib.rs  oidc.rs  password.rs  router.rs  state.rs  throttle.rs  token.rs
crates/dochub-authz/src/: perms.rs
crates/dochub-bin/: Cargo.toml
crates/dochub-bin/src/: main.rs
crates/dochub-bin/tests/: verify_provenance.rs
crates/dochub-core/: Cargo.toml
crates/dochub-core/src/: config.rs  extract.rs  ingest.rs  lib.rs
crates/dochub-crypto/: Cargo.toml
crates/dochub-crypto/src/: chain.rs  envelope.rs  error.rs  kek.rs  lib.rs  provenance.rs  sign.rs  tests.rs
crates/dochub-db/: Cargo.toml
crates/dochub-db/migrations/: 0001_initial.sql  0002_audit_log.sql  0004_user_quota.sql  0006_workspace_id_on_files.sql  0007_workspace_storage.sql  0009_files_status.sql  0010_files_thumbs_state.sql  0012_avatar_tint.sql  0013_workspace_invitations.sql  0014_drop_thumbnails.sql  0015_workspace_keys.sql  0016_file_versions.sql  0017_audit_chain.sql  0018_retention.sql  0019_legal_holds.sql  0020_provenance_keys.sql  0021_files_index_state.sql  0026_embeddings.sql  0027_api_tokens.sql  0028_audit_chain_no_fork.sql
crates/dochub-db/src/: acl.rs  api_tokens.rs  audit.rs  embeddings.rs  error.rs  file_versions.rs  files.rs  folders.rs  invitations.rs  jobs.rs  key_rotation.rs  legal_holds.rs  lib.rs  notes.rs  oidc.rs  pool.rs  projects.rs  provenance_keys.rs  registry.rs  retention.rs  search.rs  sessions.rs  share_links.rs  tags.rs  users.rs  workspace_keys.rs  workspace_storage.rs  workspaces.rs
crates/dochub-db/tests/: postgres.rs  registry.rs  repos.rs
crates/dochub-http/: Cargo.toml  build.rs
crates/dochub-http/src/: about.rs  access_log.rs  activity.rs  admin.rs  agent_http.rs  ai.rs  ask.rs  collab.rs  compliance.rs  content_search.rs  direct_upload.rs  embedding.rs  files.rs  grants.rs  headers.rs  invitations.rs  lib.rs  mcp_http.rs  metrics.rs  notes.rs  oidc.rs  pii_http.rs  presence.rs  rate_limit.rs  raw.rs  search.rs  semantic_search.rs  share.rs  spa.rs  state.rs  summary_http.rs  tags_http.rs  tokens_http.rs  versions.rs  wopi_docs.rs  workspace_storage.rs  workspaces.rs
crates/dochub-http/tests/: access_mgmt.rs  activity.rs  admin.rs  agent_ask.rs  ask.rs  auth_ip.rs  byo_storage.rs  collab.rs  compliance.rs  content_search.rs  direct_upload.rs  files.rs  handoff.rs  invitations.rs  mcp.rs  metrics.rs  notes.rs  oidc.rs  pii.rs  search.rs  semantic_search.rs  settings.rs  setup.rs  share.rs  summary.rs  tags_http.rs  tokens.rs  two_origin.rs  versions.rs  workspaces.rs
crates/dochub-index/: Cargo.toml
crates/dochub-index/src/: lib.rs
crates/dochub-mcp/: Cargo.toml
crates/dochub-mcp/src/: lib.rs
crates/dochub-storage/: Cargo.toml
crates/dochub-storage/src/: blob.rs  byo.rs  lib.rs  registry.rs  secret_box.rs
crates/dochub-storage/tests/: conformance.rs
crates/dochub-wopi/: Cargo.toml
crates/dochub-wopi/src/: docs.rs  error.rs  handlers.rs  lib.rs  router.rs  state.rs  token.rs
crates/dochub-wopi/tests/: edit_cycle.rs
crates/dochub-worker/: Cargo.toml
crates/dochub-worker/src/: lib.rs
crates/drive-auth/: Cargo.toml
crates/drive-auth/src/: error.rs  extractor.rs  handlers.rs  lib.rs  oidc.rs  router.rs  state.rs
crates/drive-bin/: Cargo.toml
crates/drive-bin/src/: main.rs
crates/drive-core/: Cargo.toml
crates/drive-core/src/: config.rs  lib.rs
crates/drive-db/: Cargo.toml
crates/drive-db/src/: lib.rs  (+10 more)
crates/drive-http/: Cargo.toml  build.rs
crates/drive-storage/: Cargo.toml
crates/drive-thumb-worker/: Cargo.toml
crates/drive-thumb-worker/src/: lib.rs  main.rs
deploy/: .env.example  README.md
deploy/compose/: coediting.yml  external-storage.yml  postgres.yml  production.yml  single-user.yml
docs/: AI-MCP.md  ARCHITECTURE.md  CAPABILITY-TRACKER.md  TESTING.md
docs/design/: foundation-access-rag-mcp.md  phase-0-build.md  phase-1-build.md  phase-3-build.md  ui-empty-states.md  ui-phases.md  ui-system-glass.md  ui-system-neobrutal.md  ui-system.md  ui-vision-2026.md
docs/ops/: RUNBOOK.md
docs/research/: 00-synthesis.md  01-wopi.md  02-auth.md  03-storage.md  04-polish-principles.md  05-rust-stack.md  06-security.md  07-marketing-site.md  08-byo-storage.md  09-notes-wiki.md  10-direct-upload.md  11-server-thumbnails.md  12-oidc.md  13-ms365-federation.md  14-presence.md  15-sandboxed-thumb-worker.md  16-scale-infra.md  17-notes-general-user-ux.md
docs/spikes/: 01-storage.md  02-wopi-host.md  04-two-origin.md  05-spa-shell.md
docs/ui-research/: 01-reference-spas.md  02-stack-pick.md  03-sign-in-patterns.md  04-file-table.md
docs/ux/: 01-flows.md  02-surface-v2.md  02-surface.md  03-settings-surface.md  04-setup-wizard.md  05-sharing-surface.md  06-activity-surface.md  07-preview-surface.md  08-editor-handoff.md  09-sort-and-select.md  10-bell-and-help.md  10-sdk-integration-plan.md  11-admin-surface.md  11-coedit-setup.md  12-search-surface.md  13-workspaces-surface.md  14-marketing-surface.md  15-byo-storage-surface.md  16-notes-surface.md  17-direct-upload-surface.md  18-version-history-surface.md
marketing/: astro.config.mjs  lighthouserc.json
marketing/public/: CNAME  llms.txt
marketing/scripts/: optimize-screenshots.mjs
spikes/05-spa-shell/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/: .gitignore  UI-BUILD-M1.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/scripts/: copy-embed.mjs
web/src/: App.tsx  main.tsx  vite-env.d.ts
(+189 files in other folders)
