[package]
name        = "dochub-ai"
description = "RAG primitives for Doc-Hub: text chunking, pluggable embeddings, and cosine retrieval"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
# Hosted answerer (Claude via the Anthropic API). rustls to match the rest of
# the workspace; json for request/response bodies. Default provider stays the
# offline ExtractiveAnswerer — this is only used when an API key is configured.
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio       = { workspace = true }
