[package]
name        = "dochub-auth"
description = "Sessions, share-links, and Argon2id passwords for Casual Drive"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
dochub-core = { path = "../dochub-core" }
dochub-db   = { path = "../dochub-db" }

axum            = { workspace = true }
tokio           = { workspace = true }
tower           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
time            = { workspace = true }
argon2          = { workspace = true }
subtle          = { workspace = true }
base64          = { workspace = true }
sha2            = { workspace = true }
url             = { workspace = true }
rand            = { workspace = true }
openidconnect   = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
http-body-util  = { workspace = true }
tower           = { version = "0.5", features = ["util"] }
