[package]
name        = "dochub"
description = "Doc-Hub — self-hostable document registry and hub for the Casual Office suite"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "dochub"
path = "src/main.rs"

[dependencies]
dochub-core    = { path = "../dochub-core" }
dochub-db      = { path = "../dochub-db" }
dochub-storage = { path = "../dochub-storage" }
dochub-wopi    = { path = "../dochub-wopi" }
dochub-auth    = { path = "../dochub-auth" }
dochub-http    = { path = "../dochub-http" }

axum               = { workspace = true }
tokio              = { workspace = true }
tower-http         = { workspace = true }
anyhow             = { workspace = true }
time               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
