[package]
name        = "dochub-core"
description = "Domain types, errors, IDs, and config for Casual Drive"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
dochub-crypto = { path = "../dochub-crypto" }

serde     = { workspace = true }
thiserror = { workspace = true }
time      = { workspace = true }
ulid      = { workspace = true }
url       = { workspace = true }
sha2      = { workspace = true }
infer     = { workspace = true }
zip       = { workspace = true }
quick-xml = { workspace = true }
pdf-extract = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
base64     = { workspace = true }
zip        = { workspace = true }
lopdf      = { workspace = true }
