[package]
name        = "dochub-crypto"
description = "AES-256-GCM envelope encryption (KEK wraps per-workspace DEK) for Doc-Hub"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
aws-lc-rs = { workspace = true }
zeroize   = { workspace = true }
thiserror = { workspace = true }
base64    = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
