[package]
name        = "dochub-crypto"
description = "AES-256-GCM envelope encryption (KEK wraps per-workspace DEK) for Doc-Hub"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
aws-lc-rs = { workspace = true }
zeroize   = { workspace = true }
thiserror = { workspace = true }
base64    = { workspace = true }
# Hash-chain primitive (`chain`): constant-time digest comparison + serde
# rendering of the lowercase-hex hash. No new crypto crate — SHA-256 reuses the
# `aws-lc-rs` digest already linked for AEAD.
subtle    = { workspace = true }
serde     = { workspace = true }
# Ed25519 provenance signing (Phase 1 §2.1). BSD-3-Clause; `verify_strict`
# rejects malleable signatures. `rand` seeds key generation from the OS CSPRNG.
ed25519-dalek = { workspace = true }
rand      = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
serde_json = { workspace = true }
