[package]
name        = "dochub-db"
description = "Metadata DB layer for Casual Drive — sqlx with portable SQLite + Postgres migrations"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
dochub-core    = { path = "../dochub-core" }
dochub-crypto  = { path = "../dochub-crypto" }
dochub-storage = { path = "../dochub-storage" }

sqlx       = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
time       = { workspace = true }
ulid       = { workspace = true }
tracing    = { workspace = true }
base64     = { workspace = true }
# Zeroize the in-memory Ed25519 provenance signing seed on drop.
zeroize    = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true }
bytes      = { workspace = true }
