[package]
name        = "dochub-index"
description = "Tantivy full-text content index for Casual Drive / Doc-Hub (Phase 3 P3.1)"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
# Full-text search engine. MIT-licensed; pure Rust. Wraps the schema,
# writer, reader, and BM25 scoring so nothing above this crate touches
# tantivy directly.
tantivy   = "0.26"
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
