[package]
name        = "drive-thumb-worker"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
rust-version.workspace = true

# Phase 3 §15 — sandboxed PDF + video thumbnail worker.
# This is a SEPARATE binary that the Drive parent process spawns one-shot
# per job. The whole point is that the decoder libraries (which have a
# long CVE history) never link into the long-lived Axum process.
#
# v0 (this pass): JSON-RPC over stdin/stdout, rlimits, optional setuid,
# ffmpeg-CLI for video, PDF stub returning `unsupported`.
# Follow-ups: pdfium-render (PDF), libseccomp (Linux syscall filter).

[[bin]]
name = "drive-thumb-worker"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
libc        = "0.2"

[dev-dependencies]
tempfile    = { workspace = true }

[lints]
workspace = true
